<resources>
    <string name="app_name">Baby</string>
    <string name="title_activity_tab_feeding">TabFeedingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_feeding">FeedingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="bottle_feeding_activity">Bottle Feeding Activity</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="choose_the_time">Choose the time</string>
    <string name="formula">Formula</string>
    <string name="amount">Amount</string>
    <string name="ml">ml</string>
    <string name="breast_milk">Breast milk</string>
    <string name="back_button">back button</string>
    <string name="submit_button">submit button</string>
    <string name="nursing_activity">Nursing Activity</string>
    <string name="last_used">Last Used :</string>
    <string name="left">Left</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="right">Right</string>
    <string name="total">TOTAL</string>
    <string name="reset">Reset</string>
    <string name="your_baby_s_profile">Your Baby\'s Profile</string>
    <string name="back_to_home">Back to home</string>
    <string name="profile">profile</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="select_the_way_of_feeding">Select the way of feeding</string>
    <string name="diaper_activity">Diaper Activity</string>
    <string name="diaper">Diaper</string>
    <string name="check_out_what_is_inside_the_baby_s_diaper">Check out what is inside the baby\'s diaper</string>
    <string name="feeding">Feeding</string>
    <string name="pumpimg_activity">Pumpimg Activity</string>
    <string name="pumping">Pumping</string>
    <string name="keeps_the_record_of_how_much_is_pumped">Keeps the record of how much is pumped</string>
    <string name="sleeping_activity">Sleeping Activity</string>
    <string name="sleep">Sleep</string>
    <string name="record_the_sleep_duration">Record the sleep duration</string>
    <string name="medication_activity">Medication Activity</string>
    <string name="medication">Medication</string>
    <string name="record_the_medication_report">Record the medication report</string>
    <string name="notes_activity">Notes Activity</string>
    <string name="notes">Notes</string>
    <string name="keep_a_note">Keep a note</string>
    <string name="diaper_status">Diaper Status?</string>
    <string name="pee">Pee</string>
    <string name="poo">Poo</string>
    <string name="both">Both</string>
    <string name="splah_logo">splah logo</string>
    <string name="hey_welcome_back">Hey, Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="baby_care">Baby Care</string>
    <string name="baby_s_activity_tracker_app">Baby\'s Activity Tracker App</string>
    <string name="name_of_the_medicine">Name of the Medicine:</string>
    <string name="write_here">Write here</string>
    <string name="quantity">Quantity</string>
    <string name="ml_g">ml/g</string>
    <string name="write_your_note_here">Write your note here…</string>
    <string name="nursing">nursing</string>
    <string name="record_the_time_of_feeding">Record the time of feeding</string>
    <string name="bottle_feeding">Bottle Feeding</string>
    <string name="which_type_of_milk_are_you_feeding">which type of milk are you feeding?</string>
    <string name="solid_feeding_activity">Solid Feeding Activity</string>
    <string name="solid_feeding">Solid Feeding</string>
    <string name="what_meal_are_you_feeding">What meal are you feeding?</string>
    <string name="today_s_activity">Today\'s Activity</string>
    <string name="welcome">Welcome</string>
    <string name="signup_to_start_your_new_routine">SignUp to start your new Routine</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="baby_s_full_name">Baby\'s Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="duration">Duration</string>
    <string name="start">Start:</string>
    <string name="start_time">Start time</string>
    <string name="end">End:</string>
    <string name="end_time">End Time</string>
    <string name="time_slept">time Slept</string>
    <string name="what_does_the_food_contains">What does the food Contains?</string>
    <string name="g">g</string>
    <string name="baby_s_activity_tracker">Baby\'s Activity Tracker</string>


</resources>
