<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    tools:context=".DiaperActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:background="#FF9E80"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_arrow_back" />

        <ImageButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="#CCFF90"
            android:contentDescription="@string/submit_button"
            android:onClick="saveData"
            android:padding="20dp"
            android:src="@drawable/ic_done"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/fragment_bg"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_diaper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_color"
            android:padding="10dp"
            android:text="@string/diaper_activity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:text="@string/date" />

            <EditText
                android:id="@+id/et_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:ignore="LabelFor" />

            <TextView
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:text="@string/time" />

            <EditText
                android:id="@+id/et_time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:focusable="false"
                android:hint="@string/choose_the_time"
                android:importantForAutofill="no"
                android:inputType="time"
                android:onClick="chooseTime"
                android:padding="10dp" />

        </LinearLayout>

        <!--  <EditText
              android:id="@+id/et_time"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:hint="Choose the time"
              android:padding="10dp"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/diaper_status"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rg_diaperStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pee" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/poo" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/both" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>