<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    tools:context=".SleepActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:background="#FF9E80"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_button" />

        <ImageButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#CCFF90"
            android:onClick="saveData"
            android:padding="20dp"
            android:src="@drawable/ic_done"
            android:contentDescription="@string/submit_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/fragment_bg"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_sleeping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_color"
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:text="@string/sleeping_activity"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:text="@string/date" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="150dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />


        </LinearLayout>

        <!--  <EditText
              android:id="@+id/et_time"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:hint="Choose the time"
              android:padding="10dp"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:text="@string/duration"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_weight=".1"
                    android:text="@string/start" />

                <EditText
                    android:id="@+id/et_time_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight=".1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:focusable="false"
                    android:hint="@string/start_time"
                    android:onClick="chooseStart"
                    android:padding="10dp"
                    android:inputType="time"
                    android:importantForAutofill="no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_weight=".1"
                    android:text="@string/end" />

                <EditText
                    android:id="@+id/et_time_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight=".1"
                    android:focusable="false"
                    android:hint="@string/end_time"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:onClick="chooseEnd"
                    android:padding="10dp"
                    android:inputType="time"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:text="@string/total"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/et_time_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_slept"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:padding="10dp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>